--- a/src/components/homepage/BrandBar.astro
+++ b/src/components/homepage/BrandBar.astro
@@ -4,9 +4,10 @@ const brands = [
   { name: 'Nitto Tires', logo: 'nitto-1.svg' },
   { name: 'Toyo Tires', logo: 'toyo-logo@2x.png' },
   { name: 'Falken Tires', logo: 'falkenn.svg' },
-  { name: 'Brand 4', logo: 'radar-logo.png' },
-  { name: 'Brand 5', logo: 'venom-logo.png' },
-  //   { name: 'Brand 6', logo: '/path/to/brand6-logo.svg' },
+  { name: 'Goodyear Tires', logo: 'goodyear-logo.svg' },
+  { name: 'Firestone Tires', logo: 'firestone.png' },
+  { name: 'Venom', logo: 'venom-logo.png' },
+  { name: 'Lock Off-Road Wheels ', logo: 'lock-offroad.png' },
   // Add more brands as needed
 ];
 ---
