--- a/src/components/modals/ModalLayout.astro
+++ b/src/components/modals/ModalLayout.astro
@@ -4,6 +4,7 @@ const { title } = Astro.props;
 
 <script is:inline>
   document.querySelector('dialog').showModal();
+  document.getElementById('phone-input').value = '';
 </script>
 
 <div class='fixed inset-0'>
@@ -12,9 +13,6 @@ const { title } = Astro.props;
       class='bg-white rounded-lg max-w-md w-full p-6 space-y-2'
       @click.outside.capture="document.querySelector('dialog').close()"
     >
-      <h3 class='text-2xl font-bold leading-6 text-left'>
-        {title}
-      </h3>
       <div>
         <slot />
       </div>
