--- a/src/components/TopBar.astro
+++ b/src/components/TopBar.astro
@@ -7,7 +7,7 @@ const navLinks = [
 ];
 ---
 
-<nav class='bg-white shadow-md'>
+<nav class='bg-white shadow-md' x-data='{ open:false }'>
   <div class='sm:max-w-7xl mx-auto px-4 sm:px-6 lg:px-8'>
     <div class='flex sm:flex-wrap items-center justify-between'>
       <!-- Left side: Navigation Links -->
@@ -37,24 +37,61 @@ const navLinks = [
         </div>
       </div>
 
+      <!-- Mobile menu button -->
+      <div class='sm:hidden items-center'>
+        <button
+          type='button'
+          @click='open = !open'
+          class='text-gray-500 hover:text-gray-700 focus:outline-none focus:text-gray-600'
+          aria-label='toggle menu'
+          id='menuToggle'
+        >
+          <svg x-show='!open' viewBox='0 0 24 24' class='h-8 w-8 fill-current'>
+            <path
+              fill-rule='evenodd'
+              d='M4 5h16a1 1 0 0 1 0 2H4a1 1 0 1 1 0-2zm0 6h16a1 1 0 0 1 0 2H4a1 1 0 0 1 0-2zm0 6h16a1 1 0 0 1 0 2H4a1 1 0 0 1 0-2z'
+            ></path>
+          </svg>
+          <svg x-show='open' viewBox='0 0 24 24' class='h-8 w-8 fill-current'>
+            <path
+              fill-rule='evenodd'
+              d='M18.278 16.864a1 1 0 0 1-1.414 1.414l-4.829-4.828-4.828 4.828a1 1 0 0 1-1.414-1.414l4.828-4.829-4.828-4.828a1 1 0 0 1 1.414-1.414l4.829 4.828 4.828-4.828a1 1 0 1 1 1.414 1.414l-4.828 4.829 4.828 4.828z'
+            ></path>
+          </svg>
+        </button>
+      </div>
+
       <!-- Right side: CTA Button -->
-      <div class='flex items-center justify-center sm:w-2/5 sm:justify-end'>
+      <div
+        class='hidden sm:flex items-center justify-center sm:w-2/5 sm:justify-end'
+      >
         <div class='flex-shrink-0 items-center'>
-          <button
-            type='button'
-            hx-get='/modals/new'
-            hx-target='dialog'
-            class='w-full sm:w-auto items-center px-6 sm:px-12 py-2 border-2 border-black text-lg font-semibold rounded-md text-black shadow-sm hover:bg-black hover:text-white focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500'
-          >
-            <span>Get your free quote</span>
-          </button>
+          <a href='/#cta'>
+            <button
+              type='button'
+              class='w-full sm:w-auto items-center px-6 sm:px-12 py-2 border-2 border-black text-lg font-semibold rounded-md text-black shadow-sm hover:bg-black hover:text-white focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500'
+            >
+              <span>Get your free quote</span>
+            </button>
+          </a>
         </div>
       </div>
     </div>
   </div>
 
-  <!-- Mobile menu button -->
-  <div class='sm:hidden absolute top-4 left-4'>
-    <!-- ... (mobile menu button code remains the same) ... -->
+  <!-- Mobile menu -->
+  <div class='sm:hidden z-20' x-show='open' x-transition-duration.200ms>
+    <div class='px-2 pt-2 pb-3 space-y-1' id='mobileMenu'>
+      {
+        navLinks.map((link) => (
+          <a
+            href={link.href}
+            class='block px-3 py-2 rounded-md text-base font-medium text-gray-700 hover:text-gray-900 hover:bg-gray-50'
+          >
+            {link.text}
+          </a>
+        ))
+      }
+    </div>
   </div>
 </nav>
