--- a/src/components/homepage/Hero.astro
+++ b/src/components/homepage/Hero.astro
@@ -73,7 +73,10 @@ import BrandBar from './BrandBar.astro';
           pricing just for you
         </p>
       </div>
-      <div class='flex flex-col sm:flex-row gap-4 max-w-4xl mx-auto mb-6'>
+      <div
+        id='cta'
+        class='flex flex-col sm:flex-row gap-4 max-w-4xl mx-auto mb-6'
+      >
         <form
           class='w-full flex flex-col sm:flex-row gap-4'
           hx-target='dialog'
