--- a/src/pages/gallery.astro
+++ b/src/pages/gallery.astro
@@ -3,8 +3,6 @@
 import Layout from '../layouts/Layout.astro';
 export const prerender = true;
 
-import { Image } from 'astro:assets';
-
 import pictureone from '@images/0.JPEG';
 import picturetwo from '@images/1.JPEG';
 import picturethree from '@images/2.JPEG';
@@ -13,78 +11,72 @@ import picturefive from '@images/4.JPEG';
 import picturesix from '@images/5.JPEG';
 import pictureseven from '@images/6.JPEG';
 import pictureeight from '@images/7.JPEG';
-import picturenine from '@images/8.JPEG';
+
 import pictureten from '@images/9.JPEG';
 import pictureeleven from '@images/10.JPEG';
-import picturetwelve from '@images/11.JPEG';
 
 // In a real application, you'd likely fetch this data from an API or CMS
 const galleryItems = [
   {
     id: 1,
     src: pictureone.src,
-    alt: 'Custom wheels on a sports car',
+    alt: 'Lock Off-Road Wheels and Off-Road tires',
     category: 'Wheels',
   },
   {
     id: 2,
     src: picturetwo.src,
-    alt: 'Off-road tires installation',
+    alt: 'New tires for delivery',
     category: 'Tires',
   },
   {
     id: 3,
     src: picturethree.src,
-    alt: 'Vintage car restoration',
-    category: 'Restoration',
+    alt: 'Pickup truck tires for delivery',
+    category: 'Tires',
   },
   {
     id: 4,
-    src: '../images/3.JPEG',
-    alt: 'Performance brake upgrade',
-    category: 'Brakes',
+    src: picturefour.src,
+    alt: 'Off-road tires for delivery',
+    category: 'Tires',
   },
   {
     id: 5,
-    src: '../images/4.JPEG',
-    alt: 'Luxury car detailing',
-    category: 'Detailing',
+    src: picturefive.src,
+    alt: 'The warehouse',
+    category: 'Tires',
   },
   {
     id: 6,
-    src: '../images/5.JPEG',
-    alt: 'Suspension lift kit installation',
-    category: 'Suspension',
+    src: picturesix.src,
+    alt: 'DRW Rims for a customer',
+    category: 'Wheels',
   },
   {
     id: 7,
-    src: '../images/6.JPEG',
-    alt: 'Suspension lift kit installation',
-    category: 'Suspension',
+    src: pictureseven.src,
+    alt: 'Boxes of rims for delivery',
+    category: 'Wheels',
   },
   {
     id: 8,
-    src: '../images/7.JPEG',
-    alt: 'Suspension lift kit installation',
-    category: 'Suspension',
+    src: pictureeight.src,
+    alt: 'Stack of tires',
+    category: 'Tires',
   },
-  {
-    id: 9,
-    src: '../images/8.JPEG',
-    alt: 'Suspension lift kit installation',
-    category: 'Suspension',
-  },
+
   {
     id: 10,
-    src: '../images/9.JPEG',
-    alt: 'Suspension lift kit installation',
-    category: 'Suspension',
+    src: pictureten.src,
+    alt: 'Lock Off-Road rims for a customer',
+    category: 'Wheels',
   },
   {
     id: 11,
-    src: '../images/10.JPEG',
-    alt: 'Suspension lift kit installation',
-    category: 'Suspension',
+    src: pictureeleven.src,
+    alt: 'New tires for delivery',
+    category: 'Tires',
   },
 ];
 ---
