--- a/src/site.css
+++ b/src/site.css
@@ -2,6 +2,9 @@
 @tailwind components;
 @tailwind utilities;
 
+html { scroll-behavior: smooth; }
+
+
 .gradient-text {
     background: linear-gradient(45deg, #FFD700, #FFA500);
     -webkit-background-clip: text;
@@ -75,4 +78,12 @@
 
   .quote-radio {
 
+  }
+
+  #fade-me-in.htmx-added {
+    opacity: 0;
+  }
+  #fade-me-in {
+    opacity: 1;
+    transition: opacity 1s ease-out;
   }
