--- a/src/components/homepage/Hero.astro
+++ b/src/components/homepage/Hero.astro
@@ -80,6 +80,7 @@ import BrandBar from './BrandBar.astro';
         <form
           class='w-full flex flex-col sm:flex-row gap-4'
           hx-target='dialog'
+          hx-indicator='#spinner'
           hx-post='/api/new-quote'
           hx-encoding='multipart/form-data'
         >
@@ -98,7 +99,21 @@ import BrandBar from './BrandBar.astro';
             type='submit'
             class='w-full sm:w-2/5 inline-flex items-center text-xl justify-center px-8 py-4 font-medium text-white transition-all duration-200 bg-amber-400 border border-transparent rounded-xl hover:bg-yellow-600 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-black'
           >
-            Get Your Free Custom Quote
+            <svg
+              class='spinner animate-spin'
+              id='spinner'
+              xmlns='http://www.w3.org/2000/svg'
+              width='24'
+              height='24'
+              viewBox='0 0 24 24'
+              fill='none'
+              stroke='currentColor'
+              stroke-width='2'
+              stroke-linecap='round'
+              stroke-linejoin='round'
+              ><path d='M21 12a9 9 0 1 1-6.219-8.56'></path></svg
+            >
+            <p class='button-text'>Get Your Free Custom Quote</p>
           </button>
         </form>
       </div>
