--- a/src/components/modals/QuoteModal.astro
+++ b/src/components/modals/QuoteModal.astro
@@ -34,6 +34,7 @@ console.log('QUOTE 2: ', quote);
   </h3>
   <form
     class='space-y-6'
+    hx-indicator='#spinner'
     hx-put={`/api/quote/${quote.id}`}
     x-data='{budgetValue:500}'
   >
