--- a/src/site.css
+++ b/src/site.css
@@ -5,6 +5,22 @@
 html { scroll-behavior: smooth; }
 
 
+.spinner {
+  display: none;
+}
+
+.htmx-request .spinner {
+  display: inline;
+}
+
+.htmx-request.spinner {
+  display: inline;
+}
+
+.htmx-request.spinner ~ .button-text {
+  display: none;
+}
+
 .gradient-text {
     background: linear-gradient(45deg, #FFD700, #FFA500);
     -webkit-background-clip: text;
@@ -73,11 +89,6 @@ html { scroll-behavior: smooth; }
 
   .yellow-button-shadow {
     text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.3);
-  }
-
-
-  .quote-radio {
-
   }
 
   #fade-me-in.htmx-added {
