--- a/src/components/modals/QuoteModal.astro
+++ b/src/components/modals/QuoteModal.astro
@@ -26,7 +26,7 @@ const { quote } = Astro.props;
         d='M9 12l2 2 4-4m6 2a9 9 0 11-18 0 9 9 0 0118 0z'></path>
     </svg>
   </div>
-  <h3 class='text-2xl font-bold leading-6 text-left'>Finish Youre Quote</h3>
+  <h3 class='text-2xl font-bold leading-6 text-left'>Finish Your Quote</h3>
   <h3 class='text-lg font-medium text-gray-600 mb-4'>
     Enter tire details to help us customize your options
   </h3>
