--- a/src/components/modals/QuoteModal.astro
+++ b/src/components/modals/QuoteModal.astro
@@ -8,8 +8,6 @@ import ModalLayout from '@components/modals/ModalLayout.astro';
 import NumberInput from './NumberInput.astro';
 
 const { quote } = Astro.props;
-
-console.log('QUOTE 2: ', quote);
 ---
 
 <ModalLayout id='fade-me-in'>
@@ -28,12 +26,13 @@ console.log('QUOTE 2: ', quote);
         d='M9 12l2 2 4-4m6 2a9 9 0 11-18 0 9 9 0 0118 0z'></path>
     </svg>
   </div>
-  <h3 class='text-2xl font-bold leading-6 text-left'>Finish Youre Quote</h3>
+  <h3 class='text-2xl font-bold leading-6 text-left'>Finish Your Quote</h3>
   <h3 class='text-lg font-medium text-gray-600 mb-4'>
     Enter tire details to help us customize your options
   </h3>
   <form
     class='space-y-6'
+    hx-indicator='#spinner'
     hx-put={`/api/quote/${quote.id}`}
     x-data='{budgetValue:500}'
   >
