--- a/src/components/homepage/Hero.astro
+++ b/src/components/homepage/Hero.astro
@@ -64,6 +64,7 @@ import BrandBar from './BrandBar.astro';
         </div>
 
         <h1 class='text-4xl sm:text-6xl font-bold mb-6 sm:mb-4 tracking-tight'>
+          Go Go Wheels and Tires <br />
           <span class='gradient-text'>Don't Pay Retail</span> on New Wheels and Tires
         </h1>
         <p class='text-xl leading-7 text-white sm:leading-8 sm:text-2xl'>
