--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -1,8 +1,14 @@
 ---
 import Layout from '@layouts/Layout.astro';
+
+const seo = {
+  title: 'Discount Tires and Wheels in Phoenix | Go Go Wheels and Tires',
+  description:
+    "Discount tires and wheels in Phoenix. Top brands like Goodyear and BF Goodrich at the best prices. Don't pay retail. Get a free quote today!",
+};
 ---
 
-<Layout title='Contact | Go Go Wheels & Tires'>
+<Layout seo={seo}>
   <div class='flex flex-col min-h-screen'>
     <main
       class='flex-grow flex items-center justify-center bg-white px-4 sm:px-6 lg:px-8'
