--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,8 +3,14 @@ import Hero from '@components/homepage/Hero.astro';
 import Layout from '@layouts/Layout.astro';
 
 export const prerender = true;
+
+const seo = {
+  title: 'Discount Tires and Wheels in Phoenix | Go Go Wheels and Tires',
+  description:
+    "Discount tires and wheels in Phoenix. Top brands like Goodyear and BF Goodrich at the best prices. Don't pay retail. Get a free quote today!",
+};
 ---
 
-<Layout>
+<Layout seo={seo}>
   <Hero />
 </Layout>
