--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -19,7 +19,7 @@ const { seo } = Astro.props;
 
 <html lang='en'>
   <head>
-    <link rel='sitemap' href='/sitemap-index.xml' />
+    <link rel='sitemap' href='/sitemap.xml' />
     <meta charset='utf-8' />
     <link rel='icon' type='image/svg+xml' href='/go-go-logo.svg' />
     <meta name='viewport' content='width=device-width' />
