--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -3,9 +3,9 @@
 import Layout from '@layouts/Layout.astro';
 
 const seo = {
-  title: 'Discount Tires and Wheels in Phoenix | Go Go Wheels and Tires',
+  title: 'About Us | Go Go Wheels and Tires',
   description:
-    "Discount tires and wheels in Phoenix. Top brands like Goodyear and BF Goodrich at the best prices. Don't pay retail. Get a free quote today!",
+    "Discount tires and wheels in Phoenix. Family owned and operated. Don't pay retail. Get a free quote today!",
 };
 ---
 
