--- a/src/pages/gallery.astro
+++ b/src/pages/gallery.astro
@@ -81,7 +81,7 @@ const galleryItems = [
 ];
 
 const seo = {
-  title: 'Discount Tires and Wheels in Phoenix | Go Go Wheels and Tires',
+  title: 'Gallery | Go Go Wheels and Tires',
   description:
     'Browse our gallery of discount tires and wheels in Phoenix. See top brands, the warehouse, and previous orders. View our five star service and get a free quote today',
 };
