--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -2,9 +2,9 @@
 import Layout from '@layouts/Layout.astro';
 
 const seo = {
-  title: 'Discount Tires and Wheels in Phoenix | Go Go Wheels and Tires',
+  title: 'Contact | Go Go Wheels and Tires',
   description:
-    "Discount tires and wheels in Phoenix. Top brands like Goodyear and BF Goodrich at the best prices. Don't pay retail. Get a free quote today!",
+    "Discount tires and wheels in Phoenix. Top brands at the best prices. Don't pay retail. Contact us and get a free quote today!",
 };
 ---
 
